styles(index): --input fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,7 @@ body {
   /* --border: oklch(1 0 0 / 10%); */
   --border: #2a2a2a;
   /* --input: oklch(1 0 0 / 15%); */
-  --input: oklch(0 0 0); /* #000000 */
+  --input: #2a2a2a;
   --ring: oklch(0.552 0.016 285.938);
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
